--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <!DOCTYPE html> 
 <html lang="en">
   
+  <!-- This is a comment! --> 
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+  </head>
   
   
 </html>
