--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <!-- This is a comment! --> 
   <head>
     <link rel="stylesheet" type="text/css" href="style.css"> 
+    <title>Test Title</title>
   </head>
   
   
