--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css"> 
     <title>Test Title</title>
   </head>
-  
+  <body>
+    name 
+  </body>
   
 </html>
